--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://twitter.com/nrj_says" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100009131420413" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/nrj_chouhan/" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/neeraj-chouhan-134588153" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/nrj_says" target="_blank" rel="noopener noreferrer" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100009131420413" target="_blank" rel="noopener noreferrer" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/nrj_chouhan/" target="_blank" rel="noopener noreferrer" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/neeraj-chouhan-134588153" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -83,7 +83,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Neeraj Chouhan</h3>
           <p class="fst-italic">
-            Hello! I am currently pursuing M.Tech in Computer Science and Engineering at IIT Kanpur and have 1 year of Industry experience in Java development. My area of interest includes topics related to Machine Learning, Deep Learning, Computer Vision, Data Structure and Algorithms. Currently, I'm working under my thesis supervisor <b>Prof. Nisheeth Srivastava</b>.
+            Hello! I am currently pursuing M.Tech in Computer Science and Engineering at IIT Kanpur and have 1 year of Industry experience in Java development. My area of interest includes topics related to Machine Learning, Deep Learning, Computer Vision, Data Structure and Algorithms. Currently, I'm working under my thesis supervisor <b><a href="https://www.cse.iitk.ac.in/users/nsrivast/" target="_blank" rel="noopener noreferrer">Prof. Nisheeth Srivastava</a></b>.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -335,37 +335,37 @@
           <tbody>
             <tr>
               <th scope="row">1</th>
-              <td><a href="https://cse.iitk.ac.in/pages/CS771.html">CS 771</a></td>
+              <td><a href="https://cse.iitk.ac.in/pages/CS771.html" target="_blank" rel="noopener noreferrer">CS 771</a></td>
               <td>Introduction Introduction To Machine Learning</td>
               <td>Prof. Nisheeth Srivastava</td>
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td><a href="https://cse.iitk.ac.in/pages/CS685.html">CS 685</a></td>
+              <td><a href="https://cse.iitk.ac.in/pages/CS685.html" target="_blank" rel="noopener noreferrer">CS 685</a></td>
               <td>Data Mining</td>
               <td>Prof. Arnab Bhattacharya</td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td><a href="https://cse.iitk.ac.in/pages/CS711.html">CS 711</a></td>
+              <td><a href="https://cse.iitk.ac.in/pages/CS711.html" target="_blank" rel="noopener noreferrer">CS 711</a></td>
               <td>Introduction To Game Theory And Mechanism Design</td>
               <td>Prof. Swaprava Nath</td>
             </tr>
             <tr>
               <th scope="row">4</th>
-              <td><a href="https://cse.iitk.ac.in/pages/CS657.html">CS 657</a></td>
+              <td><a href="https://cse.iitk.ac.in/pages/CS657.html" target="_blank" rel="noopener noreferrer">CS 657</a></td>
               <td>Information Retrieval</td>
               <td>Prof. Arnab Bhattacharya</td>
             </tr>
             <tr>
               <th scope="row">5</th>
-              <td><a href="https://cse.iitk.ac.in/pages/CS658A.html">CS 658A</a></td>
+              <td><a href="https://cse.iitk.ac.in/pages/CS658A.html" target="_blank" rel="noopener noreferrer">CS 658A</a></td>
               <td>Malware Analysis And Intrusion Detection</td>
               <td>Prof. Sandeep Kumar Shukla</td>
             </tr>
             <tr>
               <th scope="row">6</th>
-              <td><a href="https://cse.iitk.ac.in/pages/CS641.html">CS 641</a></td>
+              <td><a href="https://cse.iitk.ac.in/pages/CS641.html" target="_blank" rel="noopener noreferrer">CS 641</a></td>
               <td>Modern Cryptology</td>
               <td>Prof. Manindra Agrawal</td>
             </tr>
@@ -726,11 +726,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://twitter.com/nrj_says" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="https://www.facebook.com/profile.php?id=100009131420413" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/nrj_chouhan/" class="instagram"><i class="bi bi-instagram"></i></a>
-              <!-- <a href="https://github.com/nrjchouhan" class="github"><i class="bi bi-github"></i></a> -->
-              <a href="https://www.linkedin.com/in/neeraj-chouhan-134588153/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://twitter.com/nrj_says" target="_blank" rel="noopener noreferrer" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100009131420413" target="_blank" rel="noopener noreferrer" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/nrj_chouhan/" target="_blank" rel="noopener noreferrer" class="instagram"><i class="bi bi-instagram"></i></a>
+              <!-- <a href="https://github.com/nrjchouhan" target="_blank" rel="noopener noreferrer" class="github"><i class="bi bi-github"></i></a> -->
+              <a href="https://www.linkedin.com/in/neeraj-chouhan-134588153/" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
